header alignment fix

--- a/_sass/includes/site-content.scss
+++ b/_sass/includes/site-content.scss
@@ -15,6 +15,7 @@
 .site-content h1, .site-content h2, .site-content h3 {
     text-shadow: 0 3px 0.1em var(--shadow-color);
     text-transform: capitalize;
+    text-align: left;
 }
 
 .site-content h1 {
